stored API-KEY in a variable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,43 @@
           </form>
          </header>
          <main id="main">
-       
+          <div class="movie">
+        <img src="img1.jpg" alt="" >
+        <div class="movie-info">
+           <h3>Movie Title</h3>
+           <span class="orange">3.5</span> 
+        </div>
+           <div class="overview">
+            <h3>Overview</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quas numquam, reprehenderit perferendis enim optio earum quia mollitia? Illo accusantium dolor maxime fugit velit nemo esse eligendi earum, corporis perferendis.
+
+        </div>
+       </div>
+
+       <div class="movie">
+        <img src="img1.jpg" alt="" >
+        <div class="movie-info">
+           <h3>Movie Title</h3>
+           <span class="red">3.5</span> 
+        </div>
+           <div class="overview">
+            <h3>Overview</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quas numquam, reprehenderit perferendis enim optio earum quia mollitia? Illo accusantium dolor maxime fugit velit nemo esse eligendi earum, corporis perferendis.
+        </div>
+       </div>
+
+       <div class="movie">
+        <img src="img1.jpg" alt="" >
+        <div class="movie-info">
+           <h3>Movie Title</h3>
+           <span class="green">3.5</span>
+        </div>
+           <div class="overview">
+            <h3>Overview</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quas numquam, reprehenderit perferendis enim optio earum quia mollitia? Illo accusantium dolor maxime fugit velit nemo esse eligendi earum, corporis perferendis.
+
+        </div>
+       </div>
     </main>
     <script src="main.js"></script>
   </body>
