Created an event mouseover on h1>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <header>
+         <h1 id="newEvent">Xplore Master</h1>
         <form id="form">
            <input
            type="text"
@@ -25,7 +26,7 @@
         </div>
            <div class="overview">
             <h3>Overview</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quas numquam, reprehenderit perferendis enim optio earum quia mollitia? Illo accusantium dolor maxime fugit velit nemo esse eligendi earum, corporis perferendis.
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus est labore cupiditate, porro assumenda explicabo quo veniam facilis totam quas optio quibusdam sint blanditiis natus, ea illum ut, incidunt ad?
 
         </div>
        </div>
