--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
            <input
            type="text"
            id="search"
+           name="someuniquename-search-q "
            class="search"
            placeholder="search" />
           </form>
